force-app/main/default/objects/animalos__Assessment__c/animalos__Assessment__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>AS{00000}</displayFormat>
        <label>Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>