force-app/main/default/objects/animalos__Assessment__c/fields/animalos__Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Name__c</fullName>
    <formula>animalos__Animal__r.animalos__Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>