force-app/main/default/objects/animalos__Assessment__c/fields/animalos__Assessment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Assessment_Date_Time__c</fullName>
    <inlineHelpText>Date and Time of assessment</inlineHelpText>
    <label>Assessment Date/Time</label>
    <type>DateTime</type>
</CustomField>