force-app/main/default/objects/animalos__Assessment__c/fields/animalos__Comments__c.field-meta.xml
<CustomField>
    <fullName>animalos__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>