force-app/main/default/objects/animalos__Assessment__c/fields/animalos__Days_Known__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_Known__c</fullName>
    <label>Days Known</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>