force-app/main/default/objects/animalos__Assessment__c/fields/animalos__Total_Score__c.field-meta.xml
<CustomField>
    <fullName>animalos__Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>