force-app/main/default/objects/animalos__Assessment__c/fields/aos_Abdomen__c.field-meta.xml
<CustomField>
    <fullName>aos_Abdomen__c</fullName>
    <label>Abdomen</label>
    <type>TextArea</type>
</CustomField>