force-app/main/default/objects/animalos__Assessment__c/fields/aos_Abdominocentesis__c.field-meta.xml
<CustomField>
    <fullName>aos_Abdominocentesis__c</fullName>
    <label>Abdominocentesis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>