force-app/main/default/objects/animalos__Assessment__c/fields/aos_Abnormalities_Dipstick__c.field-meta.xml
<CustomField>
    <fullName>aos_Abnormalities_Dipstick__c</fullName>
    <label>Abnormalities - Dipstick</label>
    <length>255</length>
    <type>Text</type>
</CustomField>