force-app/main/default/objects/animalos__Assessment__c/fields/aos_Active_energetic__c.field-meta.xml
<CustomField>
    <fullName>aos_Active_energetic__c</fullName>
    <label>Active/energetic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>