force-app/main/default/objects/animalos__Assessment__c/fields/aos_Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_Contact__c</fullName>
    <label>Additional Contact</label>
    <type>Date</type>
</CustomField>