force-app/main/default/objects/animalos__Assessment__c/fields/aos_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>