force-app/main/default/objects/animalos__Assessment__c/fields/aos_Adopted_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Adopted_Animal_Name__c</fullName>
    <label>Adopted Animal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>