force-app/main/default/objects/animalos__Assessment__c/fields/aos_Aggression_barked_by_unfamiliar_dog__c.field-meta.xml
<CustomField>
    <fullName>aos_Aggression_barked_by_unfamiliar_dog__c</fullName>
    <label>Aggression barked by unfamiliar dog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>