force-app/main/default/objects/animalos__Assessment__c/fields/aos_Aggression_History__c.field-meta.xml
<CustomField>
    <fullName>aos_Aggression_History__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Has your foster pet ever snapped/mouthed/bite/scratched anyone? If so, how many times and describe the situation(s)?</inlineHelpText>
    <label>Aggression History</label>
    <type>TextArea</type>
</CustomField>