force-app/main/default/objects/animalos__Assessment__c/fields/aos_Animal_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Recommendation__c</fullName>
    <label>Animal Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other cats</fullName>
            </value>
            <value>
                <fullName>Dogs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>