force-app/main/default/objects/animalos__Assessment__c/fields/aos_Animal_Referral__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Referral</label>
    <referenceTo>animalos__Animal_Referral__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>aos_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>