force-app/main/default/objects/animalos__Assessment__c/fields/aos_Animal_response_to_unfamiliar_people__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_response_to_unfamiliar_people__c</fullName>
    <inlineHelpText>How does the animal response: tolerates them, avoids them, ignores them, hides from them, other</inlineHelpText>
    <label>Animal response to unfamiliar people</label>
    <type>TextArea</type>
</CustomField>