force-app/main/default/objects/animalos__Assessment__c/fields/aos_Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Type__c</fullName>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Ferret</fullName>
            </value>
            <value>
                <fullName>Fowl</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Poultry</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Rat</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>