force-app/main/default/objects/animalos__Assessment__c/fields/aos_Any_quirks__c.field-meta.xml
<CustomField>
    <fullName>aos_Any_quirks__c</fullName>
    <description>Foster Care Questionnaire</description>
    <inlineHelpText>Any quirks?</inlineHelpText>
    <label>Any quirks</label>
    <type>TextArea</type>
</CustomField>