force-app/main/default/objects/animalos__Assessment__c/fields/aos_Approached_by_household_while_eating__c.field-meta.xml
<CustomField>
    <fullName>aos_Approached_by_household_while_eating__c</fullName>
    <label>Approached by household while eating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>