force-app/main/default/objects/animalos__Assessment__c/fields/aos_Approached_unfamiliar_pers_while__c.field-meta.xml
<CustomField>
    <fullName>aos_Approached_unfamiliar_pers_while__c</fullName>
    <label>Approached unfamiliar pers while away</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>