force-app/main/default/objects/animalos__Assessment__c/fields/aos_Approached_while_playing_household__c.field-meta.xml
<CustomField>
    <fullName>aos_Approached_while_playing_household__c</fullName>
    <label>Approached while playing household dog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>