force-app/main/default/objects/animalos__Assessment__c/fields/aos_Approched_unfamiliar_pers_while__c.field-meta.xml
<CustomField>
    <fullName>aos_Approched_unfamiliar_pers_while__c</fullName>
    <label>Approched unfamiliar pers while walked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>