force-app/main/default/objects/animalos__Assessment__c/fields/aos_Are_there_any_current_past_NOI_or__c.field-meta.xml
<CustomField>
    <fullName>aos_Are_there_any_current_past_NOI_or__c</fullName>
    <label>Are there any current/past NOI or Nuisan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>