force-app/main/default/objects/animalos__Assessment__c/fields/aos_Barking_whining__c.field-meta.xml
<CustomField>
    <fullName>aos_Barking_whining__c</fullName>
    <label>Barking/whining</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>