force-app/main/default/objects/animalos__Assessment__c/fields/aos_Barks_persistently_when_alarmed__c.field-meta.xml
<CustomField>
    <fullName>aos_Barks_persistently_when_alarmed__c</fullName>
    <label>Barks persistently when alarmed/excited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Never_Seldom_Sometimes_Usually_Always</valueSetName>
    </valueSet>
</CustomField>