force-app/main/default/objects/animalos__Assessment__c/fields/aos_Basic_Handling_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>aos_Basic_Handling_Behaviour__c</fullName>
    <inlineHelpText>The dog should not be restrained when handled, allow them to move away if they choose to do so. Begin by touching their chest, cheek and shoulder, then move to back, feet (if safe to do so) and ears and mouth. Finally, lure the dog into a harness (this can be done at any time in the assessment). Stop immediately if handler feels unsafe. Use food as required.</inlineHelpText>
    <label>Basic Handling - Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed/compliant: soft body posture, may seek information or remain calm and engaged</fullName>
            </value>
            <value>
                <fullName>Appeasing: body/face tension, some displacement may roll over, or freeze/slow, shake off, lean</fullName>
            </value>
            <value>
                <fullName>Fearful/Anxious: avoids/retreats, may increase movement, panting, drooling, mouthing, vocalising, high displacement</fullName>
            </value>
            <value>
                <fullName>Over stimulated: high arousal, may begin to mouth, jump up, body barge, behaviour feels unsafe</fullName>
            </value>
            <value>
                <fullName>Freeze/conflict: may show whale eye, displacement, handler feels unsafe, assessment stopped</fullName>
            </value>
            <value>
                <fullName>Repulsion: dog swings around to handler, may grow/bark/snap/assessment stopped</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>