force-app/main/default/objects/animalos__Assessment__c/fields/aos_Basic_Handling_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Basic_Handling_Score__c</fullName>
    <label>Basic Handling Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>