force-app/main/default/objects/animalos__Assessment__c/fields/aos_BCS__c.field-meta.xml
<CustomField>
    <fullName>aos_BCS__c</fullName>
    <label>BCS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>