force-app/main/default/objects/animalos__Assessment__c/fields/aos_Bed_Bedding_washed_replaced__c.field-meta.xml
<CustomField>
    <fullName>aos_Bed_Bedding_washed_replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bed + Bedding - washed &amp; replaced</label>
    <type>Checkbox</type>
</CustomField>