force-app/main/default/objects/animalos__Assessment__c/fields/aos_Before_being_taken_on_a_car_trip__c.field-meta.xml
<CustomField>
    <fullName>aos_Before_being_taken_on_a_car_trip__c</fullName>
    <label>Before being taken on a car trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>