force-app/main/default/objects/animalos__Assessment__c/fields/aos_Before_being_taken_out_for_a_walk__c.field-meta.xml
<CustomField>
    <fullName>aos_Before_being_taken_out_for_a_walk__c</fullName>
    <label>Before being taken out for a walk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X0_4</valueSetName>
    </valueSet>
</CustomField>