force-app/main/default/objects/animalos__Assessment__c/fields/aos_Behaviors_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviors_Details__c</fullName>
    <label>Behaviors Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>