force-app/main/default/objects/animalos__Assessment__c/fields/aos_Behaviours_Exhibited_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviours_Exhibited_Comments__c</fullName>
    <label>Behaviours Exhibited Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>