force-app/main/default/objects/animalos__Assessment__c/fields/aos_Behaviours_Exhibited_SAE__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviours_Exhibited_SAE__c</fullName>
    <inlineHelpText>Chatting/Talking - Is able to talk or mimic humans or vocalises a lot. 
Swaying/Head Bobbing - Moving their body up &amp; down or side to side. Can mean they are stressed.  Or copies you when you move.
Grooming - Grooming you.
Hissing/Grunting - Showing displeasure by hissing or grunting at you.</inlineHelpText>
    <label>Behaviours Exhibited SAE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>aos_Animal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatting/Talking</fullName>
            </value>
            <value>
                <fullName>Swaying/Head Bobbing</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Hissing/Grunting</fullName>
            </value>
            <value>
                <fullName>Binkying</fullName>
            </value>
            <value>
                <fullName>Chinning</fullName>
            </value>
            <value>
                <fullName>Circling</fullName>
            </value>
            <value>
                <fullName>Growling/grunting</fullName>
            </value>
            <value>
                <fullName>Spraying</fullName>
            </value>
            <value>
                <fullName>Zoomies</fullName>
            </value>
            <value>
                <fullName>Playing</fullName>
            </value>
            <value>
                <fullName>Biting/Latching on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>