force-app/main/default/objects/animalos__Assessment__c/fields/aos_Behaviours_Exhibited_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviours_Exhibited_Score__c</fullName>
    <label>Behaviours Exhibited Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>