force-app/main/default/objects/animalos__Assessment__c/fields/aos_Best_Numbe_for_Behavior_Team_to__c.field-meta.xml
<CustomField>
    <fullName>aos_Best_Numbe_for_Behavior_Team_to__c</fullName>
    <label>Best Numbe for Behavior Team to Contact</label>
    <type>Phone</type>
</CustomField>