force-app/main/default/objects/animalos__Assessment__c/fields/aos_Bladder__c.field-meta.xml
<CustomField>
    <fullName>aos_Bladder__c</fullName>
    <label>Bladder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norm</fullName>
            </value>
            <value>
                <fullName>Mildly thickened</fullName>
            </value>
            <value>
                <fullName>Moderately thickened</fullName>
            </value>
            <value>
                <fullName>Severely thickened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>