force-app/main/default/objects/animalos__Assessment__c/fields/aos_Blood_glucose_mmol_L__c.field-meta.xml
<CustomField>
    <fullName>aos_Blood_glucose_mmol_L__c</fullName>
    <label>Blood glucose (mmol/L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>