force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Condition__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Condition__c</fullName>
    <label>Body Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>