force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Condition_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Condition_Check__c</fullName>
    <description>What is the body condition on intake?</description>
    <inlineHelpText>What is the body condition on intake?</inlineHelpText>
    <label>Body Condition Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underweight</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>