force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Language_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Language_Comments__c</fullName>
    <label>Body Language Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>