force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Language_SAE__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Language_SAE__c</fullName>
    <inlineHelpText>Relaxed - Grooming, sitting on your hand or shoulder, will accept pats.
Alert	- Head is constantly swivelling.
Frightened - Retreats, hides, flinches or vocalises. 
Territorial - Hissing, lunging, biting, etc.</inlineHelpText>
    <label>Body Language SAE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Frightened</fullName>
            </value>
            <value>
                <fullName>Territorial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>