force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Position__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Position__c</fullName>
    <description>Body Position - fake hand no food</description>
    <inlineHelpText>Body Position - fake hand no food</inlineHelpText>
    <label>Body Position - FHNF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Body_Position</valueSetName>
    </valueSet>
</CustomField>