force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Position_FHT__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Position_FHT__c</fullName>
    <description>Body Position - fake hand touch</description>
    <label>Body Position - FHT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Body_Position</valueSetName>
    </valueSet>
</CustomField>