force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Position_SNF_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Position_SNF_Score__c</fullName>
    <label>Body Position - SNF Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>