force-app/main/default/objects/animalos__Assessment__c/fields/aos_Body_Position_ST__c.field-meta.xml
<CustomField>
    <fullName>aos_Body_Position_ST__c</fullName>
    <description>Body Position  stick touch</description>
    <inlineHelpText>Body Position  stick touch</inlineHelpText>
    <label>Body Position - ST</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LTS_Behaviour_Eval_Body_Position</valueSetName>
    </valueSet>
</CustomField>