force-app/main/default/objects/animalos__Assessment__c/fields/aos_Bone_Marrow__c.field-meta.xml
<CustomField>
    <fullName>aos_Bone_Marrow__c</fullName>
    <label>Bone Marrow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>