force-app/main/default/objects/animalos__Assessment__c/fields/aos_Call_Response__c.field-meta.xml
<CustomField>
    <fullName>aos_Call_Response__c</fullName>
    <label>Call Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comes running to assessor and rubs</fullName>
            </value>
            <value>
                <fullName>Starts to come to assessor but gets distracted</fullName>
            </value>
            <value>
                <fullName>Looks at assessor but continues exploring</fullName>
            </value>
            <value>
                <fullName>Ignores assessor and continues exploring</fullName>
            </value>
            <value>
                <fullName>Does not explore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>