force-app/main/default/objects/animalos__Assessment__c/fields/aos_Can_Council_provide_details_of_Car__c.field-meta.xml
<CustomField>
    <fullName>aos_Can_Council_provide_details_of_Car__c</fullName>
    <label>Can Council provide details of Car owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>