force-app/main/default/objects/animalos__Assessment__c/fields/aos_Can_we_provide_further_assistance__c.field-meta.xml
<CustomField>
    <fullName>aos_Can_we_provide_further_assistance__c</fullName>
    <label>Can we provide further assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>